--- a/views/zh/vote_success.ejs
+++ b/views/zh/vote_success.ejs
@@ -14,8 +14,10 @@
                 <p>您的投票已成功!</p>
                 <p>请使用以下链接分享结果: </p>
                 <p>https://lit-anchorage-62341.herokuapp.com/zh/results/<%= poll.id %></p>
-                <p><a href="#" onClick="copyToClipboard('https://lit-anchorage-62341.herokuapp.com/zh/results/<%= poll.id %>')"><i class="fa fa-clone"></i> 复制链接</a></p>
+                <!-- <p><a href="#" onClick="copyToClipboard('https://lit-anchorage-62341.herokuapp.com/zh/results/<%= poll.id %>')"><i class="fa fa-clone"></i> 复制链接</a></p> -->
+                <p><a href="#" class="js-copy-btn"><i class="fa fa-clone"></i> 复制链接</a></p>
                 <p>点击查看问卷结果: <a href="https://lit-anchorage-62341.herokuapp.com/zh/results/<%= poll.id %>">结果链接</a></p>
+                <textarea class="text-to-copy" style="display:none">https://lit-anchorage-62341.herokuapp.com/zh/results/<%= pollId %></textarea>
             </div>
             <h4><%= poll.question %></h4>
             <% if(poll.firstName || poll.lastName) { %>
@@ -28,14 +30,125 @@
         <%- include('partials/about') %>
         <%- include('partials/contact') %>
         <%- include('partials/footer') %>
+<!-- NOTE: THIS IS A REALLY HACKY SOLUTION FOR COPY TO CLIPBOARD. PLEASE CHANGE WHEN GIVEN THE CHANCE. -->
         <script>
-            function copyToClipboard(element) {
-                var $temp = $("<input>");
-                $("body").append($temp);
-                $temp.val(element).select();
-                document.execCommand("copy");
-                $temp.remove();
-            }
+            (function() {
+                'use strict';
+
+                var textClassName = 'text-to-copy';
+                var buttonClassName = 'js-copy-btn';
+                var sets = {};
+                var regexBuilder = function(prefix) {
+                    return new RegExp(prefix + '\\S*');
+                };
+
+                window.addEventListener('DOMContentLoaded', function() {
+                    var texts = Array.prototype.slice.call(document.querySelectorAll(
+                    '[class*=' + textClassName + ']'));
+                    var buttons = Array.prototype.slice.call(document.querySelectorAll(
+                    '[class*=' + buttonClassName + ']'));
+
+                    var classNameFinder = function(arr, regex, namePrefix) {
+                    return arr.map(function(item) {
+                        return (item.className.match(regex)) ? item.className
+                        .match(regex)[0].replace(namePrefix, '') : false;
+                    }).sort();
+                    };
+
+                    sets.texts = classNameFinder(
+                    texts, regexBuilder(textClassName), textClassName);
+
+                    sets.buttons = classNameFinder(
+                    buttons, regexBuilder(buttonClassName), buttonClassName);
+
+                    var matches = sets.texts.map(function(ignore, index) {
+                    return sets.texts[index].match(sets.buttons[index]);
+                    });
+
+                    var throwErr = function(err) {
+                    throw new Error(err);
+                    };
+                    var iPhoneORiPod = false;
+                    var iPad = false;
+                    var oldSafari = false;
+                    var navAgent = window.navigator.userAgent;
+                    if (
+                    (/^((?!chrome).)*safari/i).test(navAgent)
+                    // ^ Fancy safari detection thanks to: https://stackoverflow.com/a/23522755
+                    &&
+                    !(/^((?!chrome).)*[0-9][0-9](\.[0-9][0-9]?)?\ssafari/i).test(
+                        navAgent)
+                    // ^ Even fancier Safari < 10 detection thanks to regex.  :^)
+                    ) {
+                    oldSafari = true;
+                    }
+                    // We need to test for older Safari and the device,
+                    // because of quirky awesomeness.
+                    if (navAgent.match(/iPhone|iPod/i)) {
+                    iPhoneORiPod = true;
+                    } else if (navAgent.match(/iPad/i)) {
+                    iPad = true;
+                    }
+                    var cheval = function(btn, text) {
+                        var copyBtn = document.querySelector(btn);
+
+                        var setCopyBtnText = function(textToSet) {
+                            copyBtn.textContent = textToSet;
+                        };
+                        if (iPhoneORiPod || iPad) {
+                            if (oldSafari) {
+                            setCopyBtnText("Select text");
+                            }
+                        }
+                        if (copyBtn) {
+                            copyBtn.addEventListener('click', function() {
+                                var originalCopyItem = document.querySelector(text);
+                                var dollyTheSheep = originalCopyItem.cloneNode(true);
+                                var copyItem = document.createElement('textarea');
+                                copyItem.style.opacity = 0;
+                                copyItem.style.position = "absolute";
+                                copyItem.value = dollyTheSheep.value || dollyTheSheep.textContent;
+                                document.body.appendChild(copyItem);
+                                if (copyItem) {
+                                    copyItem.focus();
+                                    copyItem.selectionStart = 0;
+                                    copyItem.selectionEnd = originalCopyItem.textContent.length;
+                                    try {
+                                        document.execCommand('copy');
+                                        if (oldSafari) {
+                                            if (iPhoneORiPod) {
+                                            setCopyBtnText("Now tap 'Copy'");
+                                            } else if (iPad) {
+                                            setCopyBtnText(
+                                                "Now tap the text, then 'Copy'");
+                                            } else {
+                                            setCopyBtnText("Press Command + C to copy");
+                                            }
+                                        }
+                                    } catch (ignore) {
+                                        setCopyBtnText("Please copy manually");
+                                    }
+                                    originalCopyItem.focus();
+                                    originalCopyItem.selectionStart = 0;
+                                    originalCopyItem.selectionEnd = originalCopyItem.textContent.length;
+                                    copyItem.remove();
+                                } else {
+                                    throwErr(
+                                        "You don't have an element with the class: '" + textClassName + "'. Please check the cheval README."
+                                    );
+                                }
+                            });
+                        } else {
+                            throwErr(
+                            "You don't have a <button> with the class: '" + buttonClassName + "'. Please check the cheval README."
+                            );
+                        }
+                    };
+                    matches.map(function(i) {
+                        cheval('.' + buttonClassName + i, '.' + textClassName + i);
+                    });
+                });
+            }());
         </script>
     </body>
 </html>
